<resources>
    <string name="app_name">Todo List</string>
    <string name="menu_item_visibility">Invisible</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">@string/API_KEY</string>
    <!-- Strings used for fragments for navigation -->
    <string name="todolist_fragment_label">TodoList Fragment</string>
    <string name="edit_task_fragment_label">Edit Task Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="scrollview_description">Insert new task</string>
    <string name="task_description">Description</string>
    <string name="task_title">Title</string>
    <string name="task_title_req">Title <font color='#FF0000'>*</font></string>
    <string name="task_description_req">Description (max 150
    characters)</string>
    <string name="add_content_description">Add</string>
    <string name="date">%s~%s</string>
    <string name="time12H">%s:%s %s</string>
    <string name="time24H">%s:%s %s</string>
    <string name="date_example">1900/01/01</string>
    <string name="starts">Starts</string>
    <string name="ends">Ends</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="location">Location</string>
</resources>