<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/taskEditFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_surface"
    tools:context=".ui.fragment.TaskEditFragment">

    <ScrollView
        android:id="@+id/instruction_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/title_input_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:hint="@string/task_title_req"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/title_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textAutoComplete"
                    android:maxLines="1"
                    android:text="@string/task_title"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/description_input_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:hint="@string/task_description_req"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_input_label">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/description_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textAutoComplete|textMultiLine"
                    android:maxLength="150"
                    android:maxLines="3"
                    android:text="@string/task_description"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/starts_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Starts"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@id/starts_date_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/starts_date_button" />

            <Button
                android:id="@+id/starts_date_button"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:textSize="18sp"
                android:minWidth="0dp"
                android:paddingHorizontal="12dp"
                android:layout_marginTop="6dp"
                app:layout_constraintStart_toEndOf="@id/starts_textView"
                app:layout_constraintTop_toBottomOf="@id/description_input_label"
                app:shapeAppearance="?attr/shapeAppearanceCornerSmall"
                tools:text="2024/02/29" />

            <Button
                android:id="@+id/starts_time_button"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="0dp"
                android:layout_marginStart="6dp"
                android:layout_marginTop="6dp"
                android:paddingHorizontal="12dp"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@id/starts_date_button"
                app:layout_constraintTop_toBottomOf="@id/description_input_label"
                app:shapeAppearance="?attr/shapeAppearanceCornerSmall"
                tools:text="13:00" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/create_date_input_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:hint="@string/create_date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/description_input_label">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/create_date_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textAutoComplete"
                    android:maxLines="1"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/due_date_input_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:hint="@string/due_date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/create_date_input_label">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/due_date_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textAutoComplete"
                    android:maxLines="1"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/location_input_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:hint="@string/location"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/due_date_input_label">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/location_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textAutoComplete"
                    android:maxLines="1"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/save"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/location_input_label" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/save_button" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>